classDiagram
    class Cluster {
        -[]Node Nodes
    }

    class Node {
        +string NodeID
        +[]string Addresses
    }

    class ClusterController {
    }

    class ClusterMonitor {
        +MonitorNodeHealth()
    }

    class NodeAvailabilityTracker {
        +TrackAvailability()
    }

    class BootStrapper {
        +BootstrapNode(node Node) error
    }

    class Carrier {
        +GetNodes() []Node
        +Broadcast(message Message) (success []Node, error)
        +SendMessageToNode(nodeID NodeID, message Message) error
    }

    class Message  {
        +MessageType Type
        +[]byte Payload
    }
    Carrier "1" o-- "*" Message : sends/receives

    class MessageType {
        <<Enumeration>>
        SealedSlicePayloadRequest
        ChunkMetaRequest
        ChunkPayloadRequest %% Not used yet
        BlobMetaRequest
        BlobPayloadRequest %% Not used yet
        Heartbeat %% This is also used for Monitoring
    }
    Message "1" o-- "1" MessageType : has type



    class MessageAuthenticator {
        +AuthenticateMessage(message Message) bool
    }

    class DataRouter {
        +StoreBlob(blob Blob) (hash.Hash, error)
        +RetrieveBlob(hash.Hash) (Blob, error)
        +DeleteBlob(hash.Hash) error
        +SetSealedSlice(SealedSliceWithPayload) error
    }

    class CAS {
        +StoreBlob(blob Blob) (hash.Hash, error)
        +GetBlob(hash.Hash) (Blob, error)
        +DeleteBlob(hash.Hash) error
    }

    class LocalSealedSliceStore {
        +Store(sealedSlice SealedSliceWithPayload, HashOfPubKey hash.Hash) error
        +Get(hash.Hash) (SealedSlice, error)
        +Delete(hash.Hash) error
        +ChunkListSealedSlices(chunkHash.Hash) (sealedSliceHashes []hash.Hash, error)
        +ChunkListSealedSlicesForPubKey(hash.Hash, HashOfPubKey hash.Hash) (sealedSliceHashes []hash.Hash, error)
    }

    class DeletionWAL {
        +LogDeletion(hash.Hash) error
        +ProcessDeletions() error
    }

    class DistributedIndex 

    class HashToNode {
        +GetNodeForHash(hash.Hash) Node
    }

    class KeyToHashAndNode {
        +GetHashAndNodeForKey(string) (hash.Hash, Node, error)
    }

    class DataReBalancer {
        +BalanceData()
    }

    class ReplicationMonitoring {
        +MonitorReplications()
    }

    class SyncIndexTree {
        +Sync()
    }

    class BackupManager {
        +BackupData()
    }

    Cluster "1" *-- "*" Node : contains
    Node "1" o-- "*" ClusterController : listensOn
    ClusterController "1" *-- "1" Carrier : communicatesVia
    Node "1" o-- "1" CAS : persists blobs
    CAS "1" o-- "1" DataRouter : delegates persistence to
    DataRouter "1" *-- "1" LocalSealedSliceStore : uses
    ClusterController "1" *-- "1" DistributedIndex : LooksUps
    DistributedIndex "1" *-- "1" HashToNode : used for mapping
    DistributedIndex "1" *-- "1" KeyToHashAndNode : lookups for keys
    ClusterController "1" *-- "1" DataReBalancer : manages
    DataReBalancer "1" *-- "1" ReplicationMonitoring : utilizes
    Carrier "1" *-- "1" MessageAuthenticator : secures
    DataRouter "1" *-- "1" ClusterController : interacts with
    ClusterController "1" *-- "1" BootStrapper : initializes
    ClusterController "1" *-- "1" ClusterMonitor : monitors
    Node "1" *-- "1" BackupManager : manages backups
    ClusterMonitor "1" *-- "1" NodeAvailabilityTracker : utilizes
    DataReBalancer "1" *-- "1" SyncIndexTree : utilizes
    Node "1" *-- "1" DeletionWAL : logs deletions


    namespace IndexModel {
        class Index {
            -LocalIndexStore store
        }
        class parentChildIndex {
            - map<hash.Hash, []hash.Hash> ParentToChildren
            - map<hash.Hash, hash.Hash> ChildToParent
        }
        class VersionIndex {
            - map<hash.Hash, []hash.Hash> VersionVectorHeads
        }
        class KeyToHashIndex {
            - map<string, hash.Hash> KeyToHash
        }
    }

    Node "1" o-- "1" Index : indexes relations and metadata
    Index "1" o-- "1" parentChildIndex : manages
    Index "1" o-- "1" VersionIndex : manages

    namespace DataModel {
        class Blob {
            +string Key
            +hash.Hash Hash
            +hash.Hash Parent
            +int64 Created
            +enum Type "Child, VersionVector, Merger"
            <<virtual>> Content
            -[]hash.Hash ChunkHashes
            +Get() []byte
        }


        class Chunk {
            +hash.Hash ChunkHash
            <<virtual>> ChunkData
            -[]hash.Hash SealedSliceHashes
            +Get() []byte
        }

        class SealedSlice {
            +hash.Hash SliceHash
            -[]byte Nonce
            +Get() []byte
        }

        class SealedSliceWithPayload {
            +SealedSlice SealedSlice
            +[]byte SealedPayload
        }

        class KeyIndex {
            -[SliceHash][HashOfPubKey] []EncapsulatedKey
        }
    }

    LocalSealedSliceStore "1" o-- "*" Blob : stores
    Blob "1" *-- "*" Chunk : materializes Content
    Chunk "1" *-- "*" SealedSlice : materializes ChunkData
    SealedSliceWithPayload "1" *-- "1" SealedSlice : wraps
    SealedSlice "1" *-- "*" KeyIndex : provides Key
    note for SealedSlice "
Blob, Chunk and SealedSlice are all persisted
as key/value entries in LocalSealedSliceStores on one
or more Nodes in the Cluster.
If a SealedSlice is stored on a Node it does not
imply that Node has the entire Blob or Chunk."